--- a/.github/workflows/workflow1.yaml
+++ b/.github/workflows/workflow1.yaml
@@ -1,12 +1,12 @@
-name: workflow 2
+name: workflow1
 on: push
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      -name: get code
-       uses: actions/checkout@v3
-      -name: Install dependencies
-       run: npm ci
-      -name: build code
-       run: npm run build
+      - name: get code
+        uses: actions/checkout@v3
+      - name: Install dependencies
+        run: npm ci
+      - name: build code
+        run: npm run build
