--- a/.github/workflows/workflow1.yaml
+++ b/.github/workflows/workflow1.yaml
@@ -4,9 +4,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: get code
+      - name: Get code
         uses: actions/checkout@v3
+      - name: Set up Node.js 20
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20"
       - name: Install dependencies
         run: npm ci
-      - name: build code
+      - name: Build code
         run: npm run build
