--- a/.github/workflows/workflow1.yaml
+++ b/.github/workflows/workflow1.yaml
@@ -6,11 +6,11 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
-      - name: Set up Node.js 20
-        uses: actions/setup-node@v3
-        with:
-          node-version: "20"
+      # - name: Set up Node.js 20
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: "20"
       - name: Install dependencies
-        run: npm ci
+        run: echo "installing"
       - name: Build code
-        run: npm run build
+        run: echo "building"
